# video-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  Caddyfile  Dockerfile  ENGINEERING_BACKLOG.md  LICENSE  Makefile  README.md  RESEARCH-2025.md  RESEARCH.md  RESEARCH_2025_2026_WORKER1.md  RESEARCH_ACTION_RECOGNITION.md  RESEARCH_EMBEDDING_UPGRADES.md  RESEARCH_GRAPH_RAG.md  RESEARCH_QUERY_ROUTING_DECOMPOSITION.md  RESEARCH_V015.md  RESEARCH_VIDEO_MLLMS_MID_2026.md  SOTA_VIDEO_UNDERSTANDING_2026.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  research_scenedetect.py  todo.md  v0.32.0-streaming-video-analysis.md  v0.40.0-RESEARCH-NEXT-FEATURES.md
.github/workflows/: ci.yml  release.yml
deploy/: grafana-dashboard.json
docs/: PRODUCTION-HARDENING-AUDIT.md  RESEARCH-V015-DEEP-DIVE.md  RESEARCH-video-evaluation-testing.md  api-mllm-endpoints.md  production-security-best-practices.md  v0.12.0-evolution-plan.md
docs/research/: multimodal_kg_video_scene_graph_advances_2026.md  v0.16.0-research-cross-video-graphs.md  v0.16.0-research-entity-tracking.md  v0.16.0-research-evolution.md  v0.16.0-research-optical-flow.py  v0.17.0-research-beyond-roadmap.md  v0.17.0-research-sota-update-june-2026.md  v0.18.0-research-next-gen.md  v0.21.0-research-video-infrastructure-evolution.md  v0.24.0-pipeline-cache-design-patterns.md  v0.31.0-research-colbert-att-reranking.md  v0.39.0-release-llm-provider.md  v0.41.0-research-rest-api-camera-streaming.md  v0.45.0-autonomous-video-curator-mcr.md  v0.51.0-hierarchical-multi-agent-orchestration.md  v0.56.0-next-generation-video-reasoning-rag.md  v0.56.0-video-ai-pipeline-optimization-h2-2026.md  v0.56.0-video-mllm-fine-tuning-research.md  v0.57.0-event-causal-rag-streaming-thinking.md  video_rag_retrieval_beyond_roadmap_2026.md
evals/: __init__.py
evals/tasks/: __init__.py  action_recognition_quality.py  frame_compression_efficiency.py  ocr_accuracy.py  retrieval_precision.py  scene_boundary_accuracy.py
scripts/: init.sh
tests/: conftest.py  test_adaptive_scaler.py  test_agent.py  test_agent_confidence.py  test_api.py  test_api_kg_health.py  test_api_orchestra.py  test_basic.py  test_benchmark.py  test_cache.py  test_camera.py  test_chapters.py  test_classifier.py  test_comparison.py  test_curator.py  test_error_handlers.py  test_evaluation.py  test_event_memory.py  test_event_rag.py  test_event_rag_integration.py  test_face.py  test_federation.py  test_flow.py  test_frame_compression.py  test_internvideo3.py  test_job_queue.py  test_knowledge_graph.py  test_llm_provider.py  test_mcp_server.py  test_metrics.py  test_mllm_api.py  test_monitor.py  test_orchestra.py  test_orchestrator.py  test_pipeline_health.py  test_quality.py  test_qwen3_vl.py  test_rate_limiter.py  test_report.py  test_self_check.py  (+10 more)
tests/benchmarks/: __init__.py  conftest.py  test_pipeline_throughput.py  test_rag_latency.py
ui/: app.py  camera.py  comparison.py  event_timeline.py  health.py  knowledge_graph.py  monitor.py  server.py  utils.py  workflow.py
ui/routes/: analysis.py  batch.py  camera.py  comparison.py  event_timeline.py  import_tab.py  knowledge_graph.py  library.py  monitor.py  search.py  settings.py
ui/static/css/: dark-theme.css
ui/static/js/: app.js  camera.js  timeline.js
ui/templates/: base.html  index.html  models.html  settings.html  stream.html
ui/templates/pages/: analysis.html  analyze.html  batch.html  camera.html  comparison.html  event_timeline.html  import.html  knowledge_graph.html  library.html  monitor.html  search.html  settings.html
video_analysis/: __init__.py  __main__.py  action.py  adaptive_scaler.py  agent.py  agent_confidence.py  api.py  benchmark.py  cache.py  chapters.py  chat.py  classifier.py  client.py  colbert_att_reranker.py  colbert_reranker.py  config.py  config_store.py  curator.py  error_handlers.py  evaluation.py  event_memory.py  event_rag.py  face.py  federation.py  flow.py  frame_compression.py  job_queue.py  knowledge_graph.py  llm_provider.py  logging_setup.py  mcp_server.py  memory.py  metrics.py  model_manager.py  models.py  orchestra.py  orchestrator.py  pipeline.py  pipeline_health.py  quality.py  (+15 more)
video_analysis/backends/: __init__.py  internvideo3.py  qwen3_vl.py
video_analysis/stream/: __init__.py  analyzer.py  chat.py  engine.py  motion.py  sampler.py  source.py  store.py
