[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "video-analysis"
version = "0.30.0"
description = "Self-hosted video analysis platform with AI chatbot — scene understanding, RAG, clip export, YouTube import, batch processing, health API"
readme = "README.md"
authors = [
    {name = "Hermes Agent"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "gradio>=6.19.0",
    "faster-whisper>=1.2.0",
    "opencv-python>=4.13.0",
    "pillow>=12.0.0",
    "chromadb>=1.5.0",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "langchain-text-splitters>=1.1.0",
    "open-clip-torch>=2.30.0",
    "structlog>=26.0.0",
    "mcp>=1.28.0",
    "prometheus-client>=0.25.0",
]

[project.scripts]
video-analysis = "video_analysis.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"
markers = [
    "gpu: marks tests that require CUDA GPU (deselect with '-m \"not gpu\"')",
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (not unit tests)",
    "benchmark: marks benchmark tests (uses pytest-benchmark)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --strict-markers"

[tool.setuptools.packages.find]
include = ["video_analysis*"]
