[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-analysis"
dynamic = ["version"]
description = "Self-hosted video analysis platform — ASR + LLM Vision for scene understanding, search, and Q&A"
readme = "README.md"
authors = [{ name = "Hermes Agent" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["video-analysis", "asr", "llm", "vision", "multimodal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # ASR
  "faster-whisper>=1.0.0",

  # Video processing
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",

  # Scene detection
  "scenedetect>=0.6.0",

  # YouTube import
  "yt-dlp>=2024.0.0",

  # API server
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.6",

  # Templates
  "jinja2>=3.1.0",
  "aiofiles>=23.0.0",

  # Dotenv
  "python-dotenv>=1.0.0",

  # Structured data
  "pydantic>=2.0.0",

  # HTTP
  "httpx>=0.25.0",

  # Progress
  "tqdm>=4.65.0",
]

[project.scripts]
video-analysis = "video_analysis.__main__:main"

[project.urls]
Homepage = "https://github.com/ningtoba/video-analysis"
Source = "https://github.com/ningtoba/video-analysis"
Issues = "https://github.com/ningtoba/video-analysis/issues"

[tool.setuptools.packages.find]
include = ["video_analysis*", "ui*"]

[tool.setuptools.dynamic]
version = { attr = "video_analysis.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"
markers = [
  "gpu: marks tests that require CUDA GPU (deselect with '-m \"not gpu\"')",
  "slow: marks slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --strict-markers"
